syntax = "proto3";

package irismod.farm.module.v1;

import "cosmos/app/v1alpha1/module.proto";

// Module is the config object of the bank module.
message Module {
  option (cosmos.app.v1alpha1.module) = {
    go_import: "github.com/irisnet/irismod/modules/farm"
  };

  string fee_collector_name = 1;
  string community_pool_name = 2;

  // authority defines the custom module authority. If not set, defaults to the governance module.
  string authority = 3;
}